[package]
name = "names-generator"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "A sensible and sufficiently random names generator"
repository = "https://github.com/siddhantk232/namegen/"

[dependencies]
false = "0.7.34"
rand = "0.8.5"
rand_core = { version = "0.6.4", default-features = false }
